# Sysilo

./: .gitignore  CODEBASE_ASSESSMENT.md  LICENSE  Makefile  README.md  package.json
.github/workflows/: ci.yml  db-migration-check.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-identity-environment-and-connector-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-07-PLAN.md  01-07-SUMMARY.md  01-08-PLAN.md  01-08-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
agent/: go.mod
agent/cmd/agent/: main.go
agent/internal/config/: config.go
agent/internal/executor/: executor.go
agent/internal/tunnel/: client.go
agent/pkg/logging/: logger.go
agent/pkg/version/: version.go
docs/: README.md  capabilities.md  glossary.md  overview.md  personas.md
docs/architecture/: agent-architecture.md  ai-engine.md  control-plane.md  multitenancy.md  security-compliance.md  system-context.md
docs/data/: canonical-models.md  data-hub.md
docs/decisions/: README.md
docs/deployment/: deployment-model.md
docs/development/: application-surface.md  configuration.md  onboarding.md
docs/diagrams/: README.md
docs/governance/: governance-center.md
docs/integration/: connectors-sdk.md  integration-studio.md
docs/operations/: operations-center.md
docs/plans/: 2026-02-03-sysilo-platform-design.md  2026-02-04-asset-graph-view.md  2026-02-04-close-the-loop.md  2026-02-04-connections-implementation.md  2026-02-04-connections-management-design.md  2026-02-04-discovery-triggering.md  2026-02-04-playbook-kafka-task-dispatcher-design.md  2026-02-04-playbook-variables-editor-design.md  2026-02-04-playbooks-design.md  2026-02-04-playbooks-implementation.md  2026-02-05-playbook-execution-mvp.md  2026-02-05-real-discovery-execution.md  2026-02-28-data-hub-v1-design.md  2026-02-28-data-hub-v1-implementation.md
docs/rationalization/: rationalization-engine.md
infra/docker/: docker-compose.yml
proto/: go.mod
schemas/neo4j/: 001_constraints.cypher
schemas/postgres/: 001_initial_schema.sql  003_data_hub_schema.sql  004_asset_registry_schema.sql  005_operations_schema.sql  006_governance_schema.sql  007_rationalization_schema.sql  008_discovery_runs_schema.sql  009_billing_schema.sql  010_rulesets_schema.sql
scripts/verify/: check_go_toolchain.sh  phase1_gap_closure.sh
services/agent-gateway/: go.mod
services/ai-service/: Dockerfile  pyproject.toml
services/api-gateway/: go.mod
services/asset-service/: Cargo.toml
services/asset-service/src/: main.rs
services/asset-service/src/api/: mod.rs
services/asset-service/src/assets/: mod.rs
services/asset-service/src/graph/: mod.rs
services/asset-service/src/impact/: mod.rs
services/asset-service/src/relationships/: mod.rs
services/data-service/: Cargo.toml
services/data-service/src/: main.rs
services/data-service/src/api/: mod.rs
services/data-service/src/catalog/: mod.rs
services/data-service/src/contracts/: mod.rs
services/data-service/src/ingestion/: mod.rs
services/data-service/src/lineage/: mod.rs
services/data-service/src/products/: api.rs  mod.rs
services/data-service/src/quality/: mod.rs
services/governance-service/: Cargo.toml
services/governance-service/src/: main.rs
services/governance-service/src/api/: mod.rs
services/governance-service/src/approvals/: mod.rs
services/governance-service/src/audit/: mod.rs
services/governance-service/src/compliance/: mod.rs
services/governance-service/src/compliance_api/: api.rs  mod.rs
services/governance-service/src/federated/: mod.rs
services/governance-service/src/kafka/: mod.rs
services/governance-service/src/policies/: mod.rs
services/governance-service/src/rulesets/: mod.rs
services/governance-service/src/standards/: mod.rs
services/integration-service/: Cargo.toml
services/integration-service/migrations/: 20260204000000_create_playbooks.sql  20260204100000_create_connections.sql
services/integration-service/src/: main.rs
services/integration-service/src/api/: mod.rs
services/integration-service/src/config/: mod.rs
services/integration-service/src/connections/: api.rs  mod.rs
services/integration-service/src/connectors/: registry.rs  specs.rs
services/integration-service/src/consumer/: mod.rs
services/integration-service/src/engine/: mod.rs
services/integration-service/src/healing/: api.rs  mod.rs
services/integration-service/src/kafka/: mod.rs
services/integration-service/src/marketplace/: api.rs  mod.rs
services/integration-service/src/middleware/: mod.rs
services/integration-service/src/playbooks/: api.rs  executor.rs  mod.rs  result_handler.rs
services/integration-service/src/storage/: mod.rs
services/integration-service/src/templates/: api.rs  mod.rs
services/mcp-server/: go.mod
services/ops-service/: Cargo.toml
services/ops-service/src/: main.rs
services/ops-service/src/alerts/: mod.rs
services/ops-service/src/api/: mod.rs
services/ops-service/src/digital_twin/: mod.rs
services/ops-service/src/evaluator/: mod.rs
services/ops-service/src/immune_system/: api.rs  mod.rs
services/ops-service/src/incidents/: mod.rs
services/ops-service/src/metrics/: mod.rs
services/ops-service/src/notifications/: mod.rs
services/rationalization-service/: Cargo.toml
services/rationalization-service/src/: main.rs
services/rationalization-service/src/api/: mod.rs
services/rationalization-service/src/live_scoring/: consumer.rs  mod.rs
services/rationalization-service/src/playbooks/: mod.rs
services/rationalization-service/src/recommendations/: mod.rs
services/rationalization-service/src/scenarios/: mod.rs
services/rationalization-service/src/scoring/: mod.rs
(+90 files in other folders)
