[package]
name = "governance-service"
version = "0.1.0"
edition = "2021"
description = "Sysilo Governance Center - Policy enforcement, approvals, and audit"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Kafka for events (use dynamic linking - requires librdkafka installed on system)
rdkafka = { version = "0.36", default-features = false, features = ["tokio"] }

# Policy engine (Rego)
regorus = "0.2"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
sha2 = "0.10"
hex = "0.4"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
