[package]
name = "integration-service"
version = "0.1.0"
edition = "2021"
authors = ["Sysilo Team"]
description = "Sysilo Integration Execution Service"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Message queue (use dynamic linking - requires librdkafka installed on system)
rdkafka = { version = "0.36", default-features = false, features = ["tokio"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "integration-service"
path = "src/main.rs"
